<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/categorias"
            android:title="@string/productos_item" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_truck"
            android:title="@string/eventos_item" />
        <item
            android:id="@+id/nav_negocios"
            android:icon="@drawable/ic_store"
            android:title="@string/negocios_item" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/usuario"
            android:title="@string/personal_item" />
    </group>



</menu>
